Changed flow-test from simple regression-test to check for a python-reference implementation

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,8 +1,8 @@
 Multiview:
 	cd ../; make all
 
-flow/tmp/forward.exr: ../Multiview
-	cd flow; valgrind ../../Multiview flow
+flow/tmp/rotate.exr: ../Multiview_debug flow/flow.mtv flow/trajectory
+	cd flow; ../../Multiview_debug flow.mtv
 
 flow/tmp/forward_advanced.exr: ../Multiview
 	cd flow; valgrind ../../Multiview flow_advanced
@@ -10,6 +10,6 @@ flow/tmp/forward_advanced.exr: ../Multiview
 test_flow_advanced: flow/tmp/forward_advanced.exr flow/data/forward.exr
 	cd flow; python3 compare.py "tmp/forward_advanced.exr" "data/forward.exr"
 
-test_flow: flow/tmp/forward.exr flow/data/forward.exr
-	cd flow; python3 compare.py "tmp/forward.exr" "data/forward.exr"
+test_flow: flow/tmp/rotate.exr
+	cd flow; python3 compare.py "tmp/rotate.exr"
 all: test_flow test_flow_advanced
