--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -52,5 +52,7 @@ jobs:
       run: git clone https://github.com/fastfloat/fast_float.git
     - name: Build with Make
       run: make -j test
+    - name: Install Python-dependencies
+      run: python3 -m pip install --upgrade pip; pip3 install numpy
     - name: Run OpenGl-Tests
       run: export LD_LIBRARY_PATH=$(pwd)/libgl-xlib; cd test; xvfb-run make all
