--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -53,6 +53,6 @@ jobs:
     - name: Build with Make
       run: make -j test
     - name: Install Python-dependencies
-      run: python3 -m pip install --upgrade pip; pip3 install numpy
+      run: python3 -m pip install --upgrade pip; pip3 install numpy imageio pyexr OpenEXR
     - name: Run OpenGl-Tests
       run: export LD_LIBRARY_PATH=$(pwd)/libgl-xlib; cd test; xvfb-run make all
