Made tests more robust

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,12 +2,15 @@
 	cd ../; make Multiview_debug
 
 flow/tmp/rotate.exr: ../Multiview_debug flow/flow.mtv flow/trajectory
+	-rm flow/tmp/*
 	-cd flow; ../../Multiview_debug flow.mtv
 
 depth/tmp/sphere.exr: ../Multiview_debug depth/sphere.mtv
+	-rm depth/tmp/*
 	-cd depth; ../../Multiview_debug sphere.mtv
 
 position/tmp/sphere.exr: ../Multiview_debug position/sphere.mtv
+	-rm position/tmp/*
 	-cd position; ../../Multiview_debug sphere.mtv
 
 test_flow: flow/tmp/rotate.exr
