--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -50,10 +50,10 @@ jobs:
       run: sudo apt-get update && sudo apt-get install qt5-qmake qtbase5-dev qtchooser qtbase5-dev-tools libopenexr-dev libpng-dev -y && sudo /sbin/ldconfig -v
     - name: fast-float
       run: git clone https://github.com/fastfloat/fast_float.git
+    - name: Install Python-dependencies
+      run: sudo apt-get install python3-dev python3-pip -y && python3 -m pip install --upgrade pip; pip3 install numpy imageio pyexr OpenEXR
     - name: Build with Make
       run: make -j test
-    - name: Install Python-dependencies
-      run: sudo apt-get install python3-pip -y && python3 -m pip install --upgrade pip; pip3 install numpy imageio pyexr OpenEXR
     - name: Install xvfb
       run: sudo apt-get install xvfb -y
     - name: Run OpenGl-Tests
